# git-foss-workflow-lecture

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
meaningful/: __init__.py  stats.py
tests/: test_stats.py
