[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meaningful"
authors = [
  { name="Jakob Jordan", email="jakobjordan@posteo.de" },
]
description = "A mean to rule all means"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/jakobj/git-foss-workflow-lecture"
"Bug Tracker" = "https://github.com/jakobj/git-foss-workflow-lecture/issues"

[tool.hatch.version]
path = "meaningful/__init__.py"
